%%{init: {'theme': 'base', 'themeVariables': {'primaryColor': '#1a2e3a', 'primaryTextColor': '#d0ecf8', 'edgeLabelBackground': '#0f1318', 'lineColor': '#4a7a9a'}}}%%
erDiagram
    PERF_RUNS ||--o{ PROOF_ARTIFACTS : has
    PERF_RUNS ||--o{ PERF_STEPS : has
    PERF_RUNS {
        text run_id PK
        text name
        text agent
        text status
        real started_at
        real ended_at
        text detail
    }
    PERF_STEPS {
        integer id PK
        text run_id FK
        text step_name
        real start_ts
        real end_ts
        text detail
    }
    PROOF_ARTIFACTS {
        integer id PK
        text run_id FK
        text agent
        text proof_type
        text title
        text path
        text detail
        real ts
    }
    API_HEALTH {
        integer id PK
        text endpoint
        text status
        real latency_ms
        text error_msg
        real checked_at
    }
    VULNERABILITIES {
        text vuln_id PK
        text scan_date
        text category
        text severity
        text file_path
        integer line_number
        text description
        text owasp_id
        text status
        text override_note
        text remediated_at
        text created_at
    }
    SCAN_RUN_LOG {
        text run_id PK
        text started_at
        text completed_at
        text projects_scanned
        integer new_vulns_count
        integer total_findings
        integer bandit_exit_code
        integer safety_exit_code
        text status
        text error_detail
    }
    %% security_dashboard.py reads vulnerabilities for default generation.
    %% src/data/security_findings.json is a retired non-authoritative shim,
    %% not a database entity or current dashboard input.
    AGENT_FEEDBACK {
        integer id PK
        text timestamp
        text agent_or_prompt_name
        text artifact_type
        text target_file_path
        text finding_text
        text severity
        text status
        text fr_id "idx_agent_feedback_status, idx_agent_feedback_severity"
        text applied_at
        text applied_by
    }
    TECH_DEBT {
        text finding_id PK
        text project
        text category
        text file_path
        integer severity
        text detail
        text action
        text status
        text created_at
    }

    %% Decision metadata: current JSON is replaced atomically; history is append-only.
    TODOS ||--o{ TODO_DECISION_METADATA_HISTORY : assessments
    TODOS {
        integer id PK
        text decision_metadata "nullable JSON; current normalized contract"
    }
    TODO_DECISION_METADATA_HISTORY {
        integer id PK
        integer todo_id FK
        text metadata "validated JSON snapshot"
        text assessed_at
    }

    %% Source: src/utils/todo_execution_lifecycle.py :: ExecutionLifecycle._create_schema
    TODO_EXECUTION_LIFECYCLE ||--o{ TODO_EXECUTION_EVENTS : records
    TODO_EXECUTION_LIFECYCLE ||--o{ TODO_EXECUTION_STALE_RECOVERIES : recovers
    TODO_EXECUTION_LIFECYCLE {
        text todo_id PK
        text fr_id
        text worker_id
        text claim_id UK
        text lease_token UK
        text state
        real lease_expires_at
        real heartbeat_at
        integer attempt
        integer max_retries
        text idempotency_key UK
        real updated_at
    }
    TODO_EXECUTION_EVENTS {
        integer event_id PK
        text todo_id
        text claim_id
        text state
        text reason
        text error
        real occurred_at
    }
    TODO_EXECUTION_STALE_RECOVERIES {
        integer recovery_id PK
        text todo_id
        text claim_id
        real recovered_at
        text reason
        text error
    }

    AGENT_HANDOFF_ENVELOPES ||--o{ AGENT_HANDOFF_RESULTS : exchanges
    AGENT_HANDOFF_ENVELOPES {
        text handoff_id PK
        integer version
        text fr_id
        text todo_id
        text source_agent
        text target_agent
        text claim_id
        real created_at
        text context_json
        text payload_digest UK
    }
    AGENT_HANDOFF_RESULTS {
        integer result_id PK
        text handoff_id FK
        text sender_agent
        text receiver_agent
        text direction
        real created_at
        text result_digest
    }

classDef life     fill:#1a2e3a,stroke:#6ab4d4,color:#d0ecf8
classDef music    fill:#3a1a24,stroke:#d47a8f,color:#f8d0dc
classDef quantum  fill:#251a3a,stroke:#a07adf,color:#e8d0f8
classDef manifest fill:#3a2e1a,stroke:#d4a96a,color:#f8ead0
classDef ws       fill:#1a3a30,stroke:#6ad4b4,color:#d0f8ee
classDef tyler    fill:#2a1a3a,stroke:#9e4aff,color:#fff
classDef orch     fill:#1a3a52,stroke:#4a9eff,color:#fff
classDef ext      fill:#3a2020,stroke:#ff7a7a,color:#ffd0d0
classDef db       fill:#3a3010,stroke:#d4c050,color:#f8f0c0
classDef state    fill:#1a1a1a,stroke:#888888,color:#cccccc